# PrivatePractices

3d_example/: CMakeLists.txt
3d_example/source/: CMakeLists.txt  main.cpp
3d_example/source/framework/: cubewidget.cpp  cubewidget.hpp
3d_example/source/graphics/: CMakeLists.txt
3d_example/source/graphics/editor/: graphicseditor.cpp  graphicseditor.hpp
3d_example/source/graphics/mainwindow/: mainwindow.cpp  mainwindow.hpp
3d_example/source/graphics/scene/: graphicsview.cpp  graphicsview.hpp
3d_example/source/utils/: CMakeLists.txt
3d_example/source/utils/include/: alertgenerator.hpp  delaywidgetcontroller.hpp  graphicitem.hpp  timeprofiler.hpp
3d_example/source/utils/src/: alertgenerator.cpp  delaywidgetcontroller.cpp  graphicitem.cpp  timeprofiler.cpp
3d_example/source/utils/test/: alert.hpp  customclass.hpp
3d_example/source/utils/test/alertTest/: alertmodel.cpp  alertmodel.hpp  alertscontroller.cpp  alertscontroller.hpp  testfile.cpp
3d_example/source/utils/test/src/: alert.cpp
